--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
         </p>
         <div class="campus-pics">
             <div class="cpics">
-                <img src="images/medium.jpg" alt="our campus">
+                <img src="medium.jpg" alt="our campus">
             </div>
             <div class="cpics">
-                <img src="images/medium2.jpg" alt="our campus">
+                <img src="medium2.jpg" alt="our campus">
             </div>
             <div class="cpics">
-                <img src="images/medium3.jpg" alt="our campus">
+                <img src="medium3.jpg" alt="our campus">
             </div>
             <div class="cpics">
-                <img src="images/uu.jpg" alt="our campus">
+                <img src="uu.jpg" alt="our campus">
             </div>
         </div>
 
@@ -91,7 +91,7 @@
         </p>
         <div class="testis">
             <div class="person1">
-                <img src="images/njoroge.jpg" alt="Geoffrey Njoroge">
+                <img src="njoroge.jpg" alt="Geoffrey Njoroge">
                 <div>
                     <p>
                         I began my tech jorney at AfriTech where i got equipped with modern programming skills. I now run my startup which gives me my daily bread and employ three others all thanks to AfriTech where i also plan to begin my advanced course in cyber security next
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="person1">
-                <img src="images/ayshah.jpg" alt="Ayshah Husssein">
+                <img src="ayshah.jpg" alt="Ayshah Husssein">
                 <div>
                     <p>
                         Joining AfriTech was the best decision i studied web design and got a front end web developer role in multinational company just a month after completion . I am still learning back end technologies from the same College through virtual learning while
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="person1">
-                <img src="images/jayne.jpg" alt="Jayne Ashley">
+                <img src="jayne.jpg" alt="Jayne Ashley">
                 <div>
                     <p>
                         Am loving it here, good lecturers the best thing is that one learns at their own pace.
