--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <i class="fa fa-instagram"></i>
         </div class="footnote">
         <p>Made with <i class="fa fa-heart"></i> by
-            <a href="https://michaelkangethu.github.io/my-portfolio-4/"><img src="images/logo.png" class="mylogo" alt="logo"></a>
+            <a href="https://michaelkangethu.github.io/my-portfolio-4/"><img src="logo.png" class="mylogo" alt="logo"></a>
         </p>
     </footer>
 
