--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                AfiTech Collage
                 <div class="nav-links" id="navlinks">
-                    <i class="fas fa-times" onclick="hideMenu()"></i>
+                    <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
@@ -25,7 +25,7 @@
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
-                <i class="fas fa-bars" onclick="showMenu()"></i>
+                <i class="fa fa-bars" onclick="showMenu()"></i>
 
             </nav>
         </header>
